@startuml

title __BST's Class Diagram__\n

  namespace BST {
    class BST.BSTree {
        + height : int
        + owner : String
        + BSTree()
        + delete()
        + inorder()
        + insert()
        + isEmpty()
        + search()
        ~ deletion()
        ~ minimum()
    }
  }
  

  namespace BST {
    class BST.BSTree.Node {
        + definition : String
        + title : String
        + getSibling()
        ~ Node()
    }
  }
  

  BST.BSTree o-- BST.BSTree.Node : root
  BST.BSTree +-down- BST.BSTree.Node
  BST.BSTree.Node o-- BST.BSTree.Node : left
  BST.BSTree.Node o-- BST.BSTree.Node : parent
  BST.BSTree.Node o-- BST.BSTree.Node : right


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
